--- a/cobertura/frame-sourcefiles.html
+++ b/cobertura/frame-sourcefiles.html
@@ -18,19 +18,16 @@ All Packages
 <td nowrap="nowrap"><a target="summary" href="com.jcabi.jdbc.JdbcSession.html">JdbcSession</a> <i>(0%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.jcabi.jdbc.NotEmptyHandler.html">NotEmptyHandler</a> <i>(0%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.jdbc.Outcome.html">Outcome</a> <i>(0%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.jcabi.jdbc.SingleHandler.html">SingleHandler</a> <i>(0%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.jdbc.SingleOutcome.html">SingleOutcome</a> <i>(0%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="com.jcabi.jdbc.StaticSource.html">StaticSource</a> <i>(0%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="com.jcabi.jdbc.Utc.html">Utc</a> <i>(0%)</i></td>
-</tr>
-<tr>
-<td nowrap="nowrap"><a target="summary" href="com.jcabi.jdbc.VoidHandler.html">VoidHandler</a> <i>(0%)</i></td>
 </tr>
 </tbody>
 </table>
