--- a/xref-test/allclasses-frame.html
+++ b/xref-test/allclasses-frame.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -18,16 +18,10 @@
 				<a href="com/jcabi/jdbc/JdbcSessionTest.html" target="classFrame">JdbcSessionTest</a>
 			</li>
 						<li>
-				<a href="com/jcabi/jdbc/NotEmptyHandlerTest.html" target="classFrame">NotEmptyHandlerTest</a>
-			</li>
-						<li>
-				<a href="com/jcabi/jdbc/SingleHandlerTest.html" target="classFrame">SingleHandlerTest</a>
+				<a href="com/jcabi/jdbc/SingleOutcomeTest.html" target="classFrame">SingleOutcomeTest</a>
 			</li>
 						<li>
 				<a href="com/jcabi/jdbc/UtcTest.html" target="classFrame">UtcTest</a>
-			</li>
-						<li>
-				<a href="com/jcabi/jdbc/VoidHandlerTest.html" target="classFrame">VoidHandlerTest</a>
 			</li>
 			      </ul>
 
