--- a/xref-test/com/jcabi/jdbc/package-frame.html
+++ b/xref-test/com/jcabi/jdbc/package-frame.html
@@ -1,9 +1,9 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-jdbc 0.11 Reference Package com.jcabi.jdbc</title>
+		<title>jcabi-jdbc 0.12 Reference Package com.jcabi.jdbc</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -22,16 +22,10 @@
             	<a href="JdbcSessionTest.html" target="classFrame">JdbcSessionTest</a>
           	</li>
           	          	<li>
-            	<a href="NotEmptyHandlerTest.html" target="classFrame">NotEmptyHandlerTest</a>
-          	</li>
-          	          	<li>
-            	<a href="SingleHandlerTest.html" target="classFrame">SingleHandlerTest</a>
+            	<a href="SingleOutcomeTest.html" target="classFrame">SingleOutcomeTest</a>
           	</li>
           	          	<li>
             	<a href="UtcTest.html" target="classFrame">UtcTest</a>
-          	</li>
-          	          	<li>
-            	<a href="VoidHandlerTest.html" target="classFrame">VoidHandlerTest</a>
           	</li>
           	      	</ul>
 
