--- a/xref/allclasses-frame.html
+++ b/xref/allclasses-frame.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -15,25 +15,19 @@
 				<a href="com/jcabi/jdbc/JdbcSession.html" target="classFrame">Fetcher</a>
 			</li>
 						<li>
-				<a href="com/jcabi/jdbc/JdbcSession.html" target="classFrame">Handler</a>
-			</li>
-						<li>
 				<a href="com/jcabi/jdbc/JdbcSession.html" target="classFrame">JdbcSession</a>
 			</li>
 						<li>
-				<a href="com/jcabi/jdbc/NotEmptyHandler.html" target="classFrame">NotEmptyHandler</a>
+				<a href="com/jcabi/jdbc/Outcome.html" target="classFrame">Outcome</a>
 			</li>
 						<li>
-				<a href="com/jcabi/jdbc/SingleHandler.html" target="classFrame">SingleHandler</a>
+				<a href="com/jcabi/jdbc/SingleOutcome.html" target="classFrame">SingleOutcome</a>
 			</li>
 						<li>
 				<a href="com/jcabi/jdbc/StaticSource.html" target="classFrame">StaticSource</a>
 			</li>
 						<li>
 				<a href="com/jcabi/jdbc/Utc.html" target="classFrame">Utc</a>
-			</li>
-						<li>
-				<a href="com/jcabi/jdbc/VoidHandler.html" target="classFrame">VoidHandler</a>
 			</li>
 			      </ul>
 
