--- a/xref/com/jcabi/jdbc/package-summary.html
+++ b/xref/com/jcabi/jdbc/package-summary.html
@@ -1,9 +1,9 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-jdbc 0.11 Reference Package com.jcabi.jdbc</title>
+		<title>jcabi-jdbc 0.12 Reference Package com.jcabi.jdbc</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -42,22 +42,17 @@
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="JdbcSession.html" target="classFrame">Handler</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
                 		<a href="JdbcSession.html" target="classFrame">JdbcSession</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="NotEmptyHandler.html" target="classFrame">NotEmptyHandler</a>
+                		<a href="Outcome.html" target="classFrame">Outcome</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="SingleHandler.html" target="classFrame">SingleHandler</a>
+                		<a href="SingleOutcome.html" target="classFrame">SingleOutcome</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -68,11 +63,6 @@
 				            	<tr>
               		<td>
                 		<a href="Utc.html" target="classFrame">Utc</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="VoidHandler.html" target="classFrame">VoidHandler</a>
               		</td>
             	</tr>
 				        	</tbody>
@@ -97,6 +87,8 @@
         	</ul>
       	</div>
 				<hr />
-		Copyright &#169; 2012-2014 jcabi.com. All Rights Reserved.
+		<div id="footer">
+			Copyright &#169; 2012&#x2013;2014 <a href="http://www.jcabi.com">jcabi.com</a>. All rights reserved.
+		</div>
 	</body>
 </html>
