--- a/xref-test/com/jcabi/jdbc/package-summary.html
+++ b/xref-test/com/jcabi/jdbc/package-summary.html
@@ -1,9 +1,9 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-jdbc 0.11 Reference Package com.jcabi.jdbc</title>
+		<title>jcabi-jdbc 0.12 Reference Package com.jcabi.jdbc</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -47,22 +47,12 @@
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="NotEmptyHandlerTest.html" target="classFrame">NotEmptyHandlerTest</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="SingleHandlerTest.html" target="classFrame">SingleHandlerTest</a>
+                		<a href="SingleOutcomeTest.html" target="classFrame">SingleOutcomeTest</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
                 		<a href="UtcTest.html" target="classFrame">UtcTest</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="VoidHandlerTest.html" target="classFrame">VoidHandlerTest</a>
               		</td>
             	</tr>
 				        	</tbody>
@@ -87,6 +77,8 @@
         	</ul>
       	</div>
 				<hr />
-		Copyright &#169; 2012-2014 jcabi.com. All Rights Reserved.
+		<div id="footer">
+			Copyright &#169; 2012&#x2013;2014 <a href="http://www.jcabi.com">jcabi.com</a>. All rights reserved.
+		</div>
 	</body>
 </html>
