--- a/xref/com/jcabi/jdbc/package-frame.html
+++ b/xref/com/jcabi/jdbc/package-frame.html
@@ -1,9 +1,9 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-jdbc 0.11 Reference Package com.jcabi.jdbc</title>
+		<title>jcabi-jdbc 0.12 Reference Package com.jcabi.jdbc</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -19,25 +19,19 @@
             	<a href="JdbcSession.html" target="classFrame">Fetcher</a>
           	</li>
           	          	<li>
-            	<a href="JdbcSession.html" target="classFrame">Handler</a>
-          	</li>
-          	          	<li>
             	<a href="JdbcSession.html" target="classFrame">JdbcSession</a>
           	</li>
           	          	<li>
-            	<a href="NotEmptyHandler.html" target="classFrame">NotEmptyHandler</a>
+            	<a href="Outcome.html" target="classFrame">Outcome</a>
           	</li>
           	          	<li>
-            	<a href="SingleHandler.html" target="classFrame">SingleHandler</a>
+            	<a href="SingleOutcome.html" target="classFrame">SingleOutcome</a>
           	</li>
           	          	<li>
             	<a href="StaticSource.html" target="classFrame">StaticSource</a>
           	</li>
           	          	<li>
             	<a href="Utc.html" target="classFrame">Utc</a>
-          	</li>
-          	          	<li>
-            	<a href="VoidHandler.html" target="classFrame">VoidHandler</a>
           	</li>
           	      	</ul>
 
