--- a/xref/allclasses-frame.html
+++ b/xref/allclasses-frame.html
@@ -12,6 +12,9 @@
 
 		<ul>
 						<li>
+				<a href="com/jcabi/jdbc/DefaultMappings.html" target="classFrame"></a>
+			</li>
+						<li>
 				<a href="com/jcabi/jdbc/Connect.html" target="classFrame">Call</a>
 			</li>
 						<li>
@@ -21,13 +24,19 @@
 				<a href="com/jcabi/jdbc/Connect.html" target="classFrame">Connect</a>
 			</li>
 						<li>
+				<a href="com/jcabi/jdbc/DefaultMappings.html" target="classFrame">DefaultMappings</a>
+			</li>
+						<li>
 				<a href="com/jcabi/jdbc/JdbcSession.html" target="classFrame">JdbcSession</a>
 			</li>
 						<li>
 				<a href="com/jcabi/jdbc/ListOutcome.html" target="classFrame">ListOutcome</a>
 			</li>
 						<li>
-				<a href="com/jcabi/jdbc/ListOutcome.html" target="classFrame">Mapping</a>
+				<a href="com/jcabi/jdbc/Outcome.html" target="classFrame">Mapping</a>
+			</li>
+						<li>
+				<a href="com/jcabi/jdbc/Outcome.html" target="classFrame">Mappings</a>
 			</li>
 						<li>
 				<a href="com/jcabi/jdbc/Outcome.html" target="classFrame">Outcome</a>
