--- a/xref-test/allclasses-frame.html
+++ b/xref-test/allclasses-frame.html
@@ -12,6 +12,9 @@
 
 		<ul>
 						<li>
+				<a href="com/jcabi/jdbc/SingleOutcomeTest.html" target="classFrame"></a>
+			</li>
+						<li>
 				<a href="com/jcabi/jdbc/ColumnOutcomeTest.html" target="classFrame">ColumnOutcomeTest</a>
 			</li>
 						<li>
@@ -19,6 +22,9 @@
 			</li>
 						<li>
 				<a href="com/jcabi/jdbc/JdbcSessionITCase.html" target="classFrame">JdbcSessionITCase</a>
+			</li>
+						<li>
+				<a href="com/jcabi/jdbc/JdbcSessionMySqlITCase.html" target="classFrame">JdbcSessionMySqlITCase</a>
 			</li>
 						<li>
 				<a href="com/jcabi/jdbc/JdbcSessionTest.html" target="classFrame">JdbcSessionTest</a>
