--- a/xref-test/com/jcabi/jdbc/package-frame.html
+++ b/xref-test/com/jcabi/jdbc/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-jdbc 0.17.3 Reference Package com.jcabi.jdbc</title>
+		<title>jcabi-jdbc 0.18.0 Reference Package com.jcabi.jdbc</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -16,6 +16,9 @@
 
       	<ul>
       		          	<li>
+            	<a href="SingleOutcomeTest.html" target="classFrame"></a>
+          	</li>
+          	          	<li>
             	<a href="ColumnOutcomeTest.html" target="classFrame">ColumnOutcomeTest</a>
           	</li>
           	          	<li>
@@ -23,6 +26,9 @@
           	</li>
           	          	<li>
             	<a href="JdbcSessionITCase.html" target="classFrame">JdbcSessionITCase</a>
+          	</li>
+          	          	<li>
+            	<a href="JdbcSessionMySqlITCase.html" target="classFrame">JdbcSessionMySqlITCase</a>
           	</li>
           	          	<li>
             	<a href="JdbcSessionTest.html" target="classFrame">JdbcSessionTest</a>
