--- a/xref/com/jcabi/jdbc/package-frame.html
+++ b/xref/com/jcabi/jdbc/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-jdbc 0.17.3 Reference Package com.jcabi.jdbc</title>
+		<title>jcabi-jdbc 0.18.0 Reference Package com.jcabi.jdbc</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -16,6 +16,9 @@
 
       	<ul>
       		          	<li>
+            	<a href="DefaultMappings.html" target="classFrame"></a>
+          	</li>
+          	          	<li>
             	<a href="Connect.html" target="classFrame">Call</a>
           	</li>
           	          	<li>
@@ -25,13 +28,19 @@
             	<a href="Connect.html" target="classFrame">Connect</a>
           	</li>
           	          	<li>
+            	<a href="DefaultMappings.html" target="classFrame">DefaultMappings</a>
+          	</li>
+          	          	<li>
             	<a href="JdbcSession.html" target="classFrame">JdbcSession</a>
           	</li>
           	          	<li>
             	<a href="ListOutcome.html" target="classFrame">ListOutcome</a>
           	</li>
           	          	<li>
-            	<a href="ListOutcome.html" target="classFrame">Mapping</a>
+            	<a href="Outcome.html" target="classFrame">Mapping</a>
+          	</li>
+          	          	<li>
+            	<a href="Outcome.html" target="classFrame">Mappings</a>
           	</li>
           	          	<li>
             	<a href="Outcome.html" target="classFrame">Outcome</a>
