--- a/xref/com/jcabi/jdbc/package-summary.html
+++ b/xref/com/jcabi/jdbc/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-jdbc 0.17.3 Reference Package com.jcabi.jdbc</title>
+		<title>jcabi-jdbc 0.18.0 Reference Package com.jcabi.jdbc</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -37,6 +37,11 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="DefaultMappings.html" target="classFrame"></a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Connect.html" target="classFrame">Call</a>
               		</td>
             	</tr>
@@ -52,6 +57,11 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="DefaultMappings.html" target="classFrame">DefaultMappings</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="JdbcSession.html" target="classFrame">JdbcSession</a>
               		</td>
             	</tr>
@@ -62,7 +72,12 @@
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="ListOutcome.html" target="classFrame">Mapping</a>
+                		<a href="Outcome.html" target="classFrame">Mapping</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="Outcome.html" target="classFrame">Mappings</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -138,7 +153,7 @@
       	</div>
 				<hr />
 		<div id="footer">
-			Copyright &#169; 2012&#x2013;2019 <a href="http://www.jcabi.com">jcabi.com</a>. All rights reserved.
+			Copyright &#169; 2012&#x2013;2022 <a href="https://www.jcabi.com">jcabi.com</a>. All rights reserved.
 		</div>
 	</body>
 </html>
