--- a/xref-test/allclasses-frame.html
+++ b/xref-test/allclasses-frame.html
@@ -39,6 +39,9 @@
 				<a href="com/jcabi/jdbc/SingleOutcomeTest.html" target="classFrame">SingleOutcomeTest</a>
 			</li>
 						<li>
+				<a href="com/jcabi/jdbc/UrlSourceTest.html" target="classFrame">UrlSourceTest</a>
+			</li>
+						<li>
 				<a href="com/jcabi/jdbc/UtcTest.html" target="classFrame">UtcTest</a>
 			</li>
 			      </ul>
