--- a/xref/allclasses-frame.html
+++ b/xref/allclasses-frame.html
@@ -63,6 +63,9 @@
 				<a href="com/jcabi/jdbc/StoredProcedureOutcome.html" target="classFrame">StoredProcedureOutcome</a>
 			</li>
 						<li>
+				<a href="com/jcabi/jdbc/UrlSource.html" target="classFrame">UrlSource</a>
+			</li>
+						<li>
 				<a href="com/jcabi/jdbc/Utc.html" target="classFrame">Utc</a>
 			</li>
 						<li>
