--- a/xref-test/com/jcabi/jdbc/package-frame.html
+++ b/xref-test/com/jcabi/jdbc/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-jdbc 0.18.2 Reference Package com.jcabi.jdbc</title>
+		<title>jcabi-jdbc 0.19.0 Reference Package com.jcabi.jdbc</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -41,6 +41,9 @@
           	</li>
           	          	<li>
             	<a href="SingleOutcomeTest.html" target="classFrame">SingleOutcomeTest</a>
+          	</li>
+          	          	<li>
+            	<a href="UrlSourceTest.html" target="classFrame">UrlSourceTest</a>
           	</li>
           	          	<li>
             	<a href="UtcTest.html" target="classFrame">UtcTest</a>
