--- a/xref/com/jcabi/jdbc/package-frame.html
+++ b/xref/com/jcabi/jdbc/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-jdbc 0.18.2 Reference Package com.jcabi.jdbc</title>
+		<title>jcabi-jdbc 0.19.0 Reference Package com.jcabi.jdbc</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -65,6 +65,9 @@
           	</li>
           	          	<li>
             	<a href="StoredProcedureOutcome.html" target="classFrame">StoredProcedureOutcome</a>
+          	</li>
+          	          	<li>
+            	<a href="UrlSource.html" target="classFrame">UrlSource</a>
           	</li>
           	          	<li>
             	<a href="Utc.html" target="classFrame">Utc</a>
